# boozie

./: README.md  pyproject.toml
boozie/: app.py  get_data.py
boozie/conf/: config.yaml
boozie/data/: metadata.yaml  ml.csv  samples.csv  wine.csv
boozie/ml/: model.py
notebooks/: 01-extract-samples.ipynb  02-model.ipynb  03-plot.ipynb
tests/: test_app.py
